@@ -3,25 +3,15 @@ dependencies {
     testImplementation project(':testnbtlanguage')
 }
 
-compileTestJava.dependsOn(':testhexlanguage:jar', ':testnbtlanguage:jar')
-
-javaModule {
-    extraTestModules = ['com.github.kneelawk.nbtcoder.test.hexlanguage', 'com.github.kneelawk.nbtcoder.test.nbtlanguage']
+compileTestJava {
+    moduleOptions {
+        addModules = ['com.github.kneelawk.nbtcoder.test.hexlanguage', 'com.github.kneelawk.nbtcoder.test.nbtlanguage']
+        addReads = ['com.github.kneelawk.nbtcoder.nbt': 'com.github.kneelawk.nbtcoder.test.hexlanguage,com.github.kneelawk.nbtcoder.test.nbtlanguage']
+    }
 }
 
 test {
-    doFirst {
-        def newJvmArgs = new ArrayList<String>()
-        for (int i = 0; i < jvmArgs.size(); i++) {
-            def value = jvmArgs.get(i)
-            newJvmArgs.add(value)
-            String patch
-            if ('--patch-module'.equals(value) && (patch = jvmArgs.get(++i)).startsWith(javaModule.name)) {
-                newJvmArgs.add("$patch:${processTestResources.outputs.files.singleFile}")
-            }
-        }
-        newJvmArgs.add('--add-opens')
-        newJvmArgs.add("${javaModule.name}/${javaModule.name}=org.junit.jupiter.params")
-        jvmArgs = newJvmArgs
+    moduleOptions {
+        addOpens = [("$moduleName/$moduleName".toString()): 'org.junit.jupiter.params']
     }
 }
