@@ -6,26 +6,22 @@ dependencies {
     testImplementation project(':testnbtlanguage')
 }
 
-compileJava.dependsOn(':nbt:jar', ':utils:jar')
-compileTestJava.dependsOn(':testutils:jar', ':testnbtlanguage:jar')
+compileJava {
+    doFirst {
+        // work around for bug where antlr generated files are not added to the compileJava source path
+        options.sourcepath = project.files(sourceSets.main.java.srcDirs)
+    }
+}
 
-javaModule {
-    extraTestModules = ['com.github.kneelawk.nbtcoder.test.utils', 'com.github.kneelawk.nbtcoder.test.nbtlanguage']
+compileTestJava {
+    moduleOptions {
+        addModules = ['com.github.kneelawk.nbtcoder.test.utils', 'com.github.kneelawk.nbtcoder.test.nbtlanguage']
+        addReads = ['com.github.kneelawk.nbtcoder.nbtlanguage': 'com.github.kneelawk.nbtcoder.test.utils,com.github.kneelawk.nbtcoder.test.nbtlanguage']
+    }
 }
 
 test {
-    doFirst {
-        def newJvmArgs = new ArrayList<String>()
-        for (int i = 0; i < jvmArgs.size(); i++) {
-            def value = jvmArgs.get(i)
-            newJvmArgs.add(value)
-            String patch
-            if ('--patch-module'.equals(value) && (patch = jvmArgs.get(++i)).startsWith(javaModule.name)) {
-                newJvmArgs.add("$patch:${processTestResources.outputs.files.singleFile}")
-            }
-        }
-        newJvmArgs.add('--add-opens')
-        newJvmArgs.add("${javaModule.name}/${javaModule.name}=org.junit.jupiter.params")
-        jvmArgs = newJvmArgs
+    moduleOptions {
+        addOpens = [("$moduleName/$moduleName".toString()): 'org.junit.jupiter.params']
     }
 }
